deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lcp-server
  labels:
    app: lcp-server
spec:
  selector:
    app: lcp-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
